--- a/ui/assets/css/main.css
+++ b/ui/assets/css/main.css
@@ -1,5 +1,8 @@
+/* Stolen CSS */
 @import url("reset.css");
-@import url("clearfix.css");
+
+/* Custom CSS */
+
 @import url("vars.css");
-@import url("typo.css");
 @import url("layout.css");
+@import url("typo.css");
