--- a/ui/assets/css/layout.css
+++ b/ui/assets/css/layout.css
@@ -23,16 +23,10 @@ html, body {
 
 .toolbar > * {
     padding-top: 14px;
-    text-align: right;
 }
 
 #projects {
     grid-area: projects;
-}
-
-.logout {
-    grid-area: tabs;
-    text-align: right;
 }
 
 .main {
@@ -57,6 +51,7 @@ label {
     padding-left: 15px;
     height: 0;
     opacity: 0;
+    overflow: hidden;
     transition: opacity 0.2s linear, height 0.2s linear;
 }
 
@@ -68,17 +63,6 @@ label {
 
 .folder, .file {
     cursor: pointer;
-}
-
-.folder::before {
-    display: inline-block;
-    font-style: normal;
-    font-variant: normal;
-    text-rendering: auto;
-    -webkit-font-smoothing: antialiased;
-    font-family: "Font Awesome 5 Free";
-    font-weight: 400;
-    content: "\f0da";
 }
 
 .workarea {
